@@ -1,9 +1,19 @@
+2007-03-22 Jens Tkotz <jens@peino.de> 1.5.6-svn-b22
+
+ * Fix: Htmlfix in b21 broke image area links.
+
+   Thanks again to Ajuniper.
+
+ * Fix: No empty tooltip if no hovertext is given.
+
 2007-03-21 Jens Tkotz <jens@peino.de> 1.5.6-svn-b21
 
  * Fix: Quotes (single and double) and backslash were not quoted in
         imagemap.
 
- * Fix: Little HTMLvfixes in imagemap.
+   Thanks to Ajuniper from forum.
+
+ * Fix: Little HTMLfixes in imagemap.
 
 2007-03-09 Jens Tkotz <jens@peino.de> 1.5.6-svn-b20
 
